--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - 6379
     restart: unless-stopped
     networks:
-      - primary
+      - private
 
   faye:
     build: .
@@ -22,3 +22,10 @@ services:
       - ./faye/.env
     volumes:
       - ./ssl:/etc/ssl/certs/faye
+    networks:
+      - public
+      - private
+
+networks:
+  public:
+  private:
