Added server auth and logger extension, updated docker-compose, added logging gem, updated puma configuration, and updated readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - ./faye/.env
     volumes:
       - ./ssl:/etc/ssl/certs/faye
+      - ./tokens:/usr/local/faye/tokens
     networks:
       - public
       - private
