--- a/faye/.env.example
+++ b/faye/.env.example
@@ -7,6 +7,8 @@ FAYE_TAG=faye
 FAYE_MOUNT=/faye
 FAYE_TIMEOUT=25
 
+FAYE_TOKENS_JSON_FILE=example.json
+
 FAYE_THREADS_MIN=3
 FAYE_THREADS_MAX=6
 FAYE_WORKERS=9
