Updated entrypoint, puma, tested thin deployment, and logging

--- a/faye/Gemfile
+++ b/faye/Gemfile
@@ -3,7 +3,8 @@ source 'https://rubygems.org'
 gem 'permessage_deflate'
 gem 'faye'
 gem 'faye-redis'
-gem 'puma'
+gem 'thin'
 gem 'awesome_print'
 gem 'openssl'
 gem 'logging'
+gem 'puma'
