--- a/nginx/.env.example
+++ b/nginx/.env.example
@@ -8,6 +8,7 @@ FAYE_WORKER_CONNECTIONS=4096
 FAYE_SENDFILE=off
 FAYE_TCP_NOPUSH=on
 FAYE_SERVER_NAMES_HASH_BUCKET_SIZE=128
+FAYE_CORS_ORIGIN_URL=^http[s]?://(localhost|([a-zA-Z0-9-]{1,99})\.yoursite\.com|yoursite\.com|www.\.yoursite\.com)(:([0-9]{1,4}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5]))?((/[^?#[:space:]]+)(\?[^#[:space:]]+)?(\#.+)?)?
 
 FAYE_USE_SSL=1
 FAYE_HTTPS_PORT=443
